2015-07-28  c.hetherington  <cth@carlh.net>

	* Notice when content is modified and offer to save the project
	on closing DCP-o-matic.

	* Recognise .w64 and .flac as audio files.

2015-07-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.30 released.

2015-07-27  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Version 2.1.29 released.

2015-07-27  Carl Hetherington  <cth@carlh.net>

	* Fix i18n for some messages.

2015-07-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.28 released.

2015-07-24  Carl Hetherington  <cth@carlh.net>

	* Fix problems when using large start trims relative
	to content length.

2015-07-22  Carl Hetherington  <cth@carlh.net>

	* Use NR for rating an in ISDCF name if none is specified.

2015-07-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.27 released.

2015-07-21  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect conversion of audio from DCP sources (#642).

2015-07-20  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.26 released.

2015-07-20  Carl Hetherington  <cth@carlh.net>

	* Fix missing second lines of subtitles in
	some cases (#641).

2015-07-19  Carl Hetherington  <cth@carlh.net>

	* Fix some missing set-to-defaults (#640).

	* Version 2.1.25 released.

2015-07-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.24 released.

2015-07-17  c.hetherington  <cth@carlh.net>

	* Support FTP upload to TMS (#639).

	* Fix bad behaviour of timeline snap.

2015-07-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.23 released.

2015-07-17  Carl Hetherington  <cth@carlh.net>

	* Improve still-image filename sorting.

2015-07-16  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Version 2.1.22 released.

2015-07-16  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-07-14  c.hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.
